# cmu_scheduling_assistant

./: .gitignore  CONTRIBUTING.md  Makefile  PROVENANCE.md  README.md  project_context.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: backend-tests.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: checklist.py  data_loader.py  llm_provider.py  main.py  models.py  orchestrator.py  prereq.py  ranking.py  rationale.py  requirements.py  requirements_loader.py  solver.py  verifier.py
backend/tests/: test_api.py  test_checklist.py  test_health.py  test_ingest.py  test_llm_provider.py  test_models.py  test_orchestrator.py  test_prereq.py  test_requirements.py  test_solver.py  test_verifier.py
data/fixtures/: catalog_sample.html  fce_sample.csv  soc_sample.html
data/requirements/: cs_requirements.json
data/samples/: courses.json
deploy/: LEARNER_LAB.md  update.sh  user-data.sh
docs/: CONTRIBUTING.md  ai-use.md  architecture.md  deployment.md  project-context.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: ChatBox.tsx  ChatThread.tsx  ConfirmationPanel.tsx  PrereqChecklist.tsx  RationalePanel.tsx  SchedulePanel.tsx  SurveyForm.tsx  WeekGrid.tsx
scripts/ingest/: README.md  __init__.py  cli.py  ingest.py  parsers.py
