[project]
name = "cmu-scheduler-backend"
version = "0.0.0"
description = "Backend for cmu-scheduler — a conversational course-scheduling assistant for CMU students."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    # Ingestion (off the request path): live fetch + HTML parsing of CMU sources.
    "httpx",
    "beautifulsoup4",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Make the self-owned ingestion package (repo-root/scripts/ingest) importable as
# `ingest` from the backend test suite. Resolved relative to this file's dir.
pythonpath = ["../scripts"]
