[project]
name = "cmu-scheduler-backend"
version = "0.0.0"
description = "Backend for cmu-scheduler — a conversational course-scheduling assistant for CMU students."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    # Ingestion (off the request path): live fetch + HTML parsing of CMU sources.
    # Also the transport for OpenAI-compatible LLM providers (see app/llm_provider.py) —
    # no vendor SDK is required, and no provider dependency is needed for the
    # default `stub`, which makes no network call at all.
    "httpx",
    "beautifulsoup4",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
# app is installed and imported absolutely; scripts/ingest is imported as `ingest`.
src = ["app", "../scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Make the self-owned ingestion package (repo-root/scripts/ingest) importable as
# `ingest` from the backend test suite. Resolved relative to this file's dir.
pythonpath = ["../scripts"]
